--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
     "url": "git+https://github.com/zrrrzzt/tfk-api-unoconv.git"
   },
   "dependencies": {
-    "hapi": "16.7.0",
-    "inert": "4.2.1",
+    "@hapi/hapi": "^20.1.5",
+    "@hapi/inert": "^6.0.3",
+    "path-parse": ">=1.0.7",
     "unoconv2": "1.0.0",
     "uuid": "8.3.2"
   },
   "devDependencies": {
     "coveralls": "3.1.0",
     "standard": "16.0.3",
-    "tap": "14.11.0"
+    "tap": "15.0.9"
   }
 }
