--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "standard-fix": "standard --fix",
     "refresh": "rm -rf node_modules && rm package-lock.json && npm install"
   },
+  "bin": {
+    "tfk-api-unoconv": "./standalone.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zrrrzzt/tfk-api-unoconv.git"
