--- a/package.json
+++ b/package.json
@@ -33,15 +33,15 @@
     "url": "git+https://github.com/zrrrzzt/tfk-api-unoconv.git"
   },
   "dependencies": {
-    "@hapi/hapi": "^20.1.5",
-    "@hapi/inert": "^6.0.3",
+    "@hapi/hapi": "^20.2.1",
+    "@hapi/inert": "^6.0.5",
     "awesome-unoconv": "^1.0.1",
     "path-parse": ">=1.0.7",
-    "uuid": "8.3.2"
+    "uuid-random": "1.3.2"
   },
   "devDependencies": {
-    "coveralls": "3.1.0",
-    "standard": "16.0.3",
-    "tap": "15.0.9"
+    "coveralls": "3.1.1",
+    "standard": "16.0.4",
+    "tap": "15.1.6"
   }
 }
